画像フォールバック用のdata属性ヘルパーを追加

--- a/app/views/calendars/_calendar_index.html.erb
+++ b/app/views/calendars/_calendar_index.html.erb
@@ -10,11 +10,10 @@
         <% if entry = entries.find { |e| e.registration_date.day == day } %>
           <div class="h-full flex flex-col justify-end items-center sm:py-2">
             <%= image_tag(
-                  entry.user.avatar_url,
-                  class: 'rounded-full w-7 h-7 sm:w-12 sm:h-12 object-cover',
-                  onerror: "this.src='#{asset_path('default_avatar.png')}'; this.removeAttribute('onerror');",
-                  alt: 'プロフィール画像'
-                ) %>
+              entry.user.avatar_url,
+              class: 'rounded-full w-7 h-7 sm:w-12 sm:h-12 object-cover',
+              data: fallback_image_data,
+              alt: 'プロフィール画像') %>
           </div>
         <% end %>
       </div>
