--- a/app/views/calendars/_calendar_show.html.erb
+++ b/app/views/calendars/_calendar_show.html.erb
@@ -42,7 +42,7 @@
                             'w-10 h-10' => entries.size == 2,
                             'w-8 h-8' => entries.size >= 3
                           ),
-                          onerror: "this.src='#{asset_path('default_avatar.png')}'; this.removeAttribute('onerror');",
+                          data: fallback_image_data,
                           alt: 'プロフィール画像') %>
           <% end %>
 
