--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -7,12 +7,14 @@
 
     <% if signed_in? %>
       <div data-controller="dropdown" class="relative">
-        <button data-action="click->dropdown#toggle">
-          <%= image_tag current_user.avatar_url,
-                        class: 'h-10 w-10 rounded-full object-cover hover-border-white',
-                        data: fallback_image_data,
-                        alt: 'プロフィール画像' %>
-        </button>
+        <div class="flex items-center space-x-4">
+          <button data-action="click->dropdown#toggle">
+            <%= image_tag current_user.avatar_url,
+                          class: 'h-10 w-10 rounded-full object-cover hover-border-white',
+                          data: fallback_image_data,
+                          alt: 'プロフィール画像' %>
+          </button>
+        </div>
 
         <ul data-dropdown-target="menu"
             class="hidden bg-white/10 z-50 text-sm absolute right-0 mt-2 w-36 border border-white/20 rounded shadow p-2 backdrop-blur-sm">
@@ -25,12 +27,6 @@
                         data: { turbo_method: :delete },
                         class: 'block px-2 py-1 hover:bg-white/20 rounded' %>
           </li>
-          <% if current_user&.admin? %>
-            <li>
-              <%= link_to 'カレンダーを作成', new_calendar_path,
-                          class: 'block px-2 py-1 hover:bg-white/20 rounded' %>
-            </li>
-          <% end %>
         </ul>
       </div>
     <% else %>
