--- a/app/views/calendars/index.html.erb
+++ b/app/views/calendars/index.html.erb
@@ -6,7 +6,7 @@
       <%= image_tag 'logo.png', alt: 'ロゴ', class: 'h-[300px] md:h-[400px] mx-auto' %>
     </h1>
     <p class="drop-shadow-md text-lg font-bold tracking-wider">Fjord Bootcampのアドベントカレンダー</p>
-    <% if current_user&.admin? %>
+    <% if current_user&.admin? && !Calendar.exists?(year: Time.current.year) %>
       <%= link_to 'カレンダーを作成', new_calendar_path,
                   class: 'mt-8 inline-block border-2 border-white px-4 py-2 rounded-lg font-semibold hover:bg-white/10' %>
     <% end %>
