ボタンのテキストを保存から登録するに変更

--- a/app/views/entries/_entry_modal.html.erb
+++ b/app/views/entries/_entry_modal.html.erb
@@ -47,7 +47,7 @@
             <% end %>
           </div>
 
-          <%= form.submit '保存',
+          <%= form.submit '登録する',
                           class: 'text-white box-style bg-dark-ochre hover-ochre-invert' %>
         </div>
       <% end %>
