--- a/app/views/calendars/_form.html.erb
+++ b/app/views/calendars/_form.html.erb
@@ -20,7 +20,7 @@
         <% end %>
       </div>
 
-      <%= form.submit '保存',
+      <%= form.submit '登録する',
                       class: 'text-white box-style bg-dark-ochre hover-ochre-invert' %>
     </div>
   </div>
