--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -33,7 +33,7 @@
       <%= button_to 'ログイン', user_github_omniauth_authorize_path,
                     method: :post,
                     data: { turbo: false },
-                    class: 'border-2 border-white px-4 py-2 rounded-lg font-semibold hover:bg-white/10' %>
+                    class: 'login-button' %>
     <% end %>
   </div>
 </header>
