--- a/app/views/entries/_entry_modal.html.erb
+++ b/app/views/entries/_entry_modal.html.erb
@@ -31,6 +31,8 @@
                               placeholder: 'https://example.com' %>
         </div>
 
+        <p>※タイトルと記事URLは空でも登録できます</p>
+
         <div class="flex justify-between mt-6">
           <div class="flex gap-2">
             <%= button_tag 'キャンセル', type: 'button', data: { action: 'entry-modal#close' },
