ログインボタンのスタイルを変更

--- a/app/views/calendars/show.html.erb
+++ b/app/views/calendars/show.html.erb
@@ -32,7 +32,7 @@
       <%= button_to user_github_omniauth_authorize_path,
                     method: :post,
                     data: { turbo: false },
-                    class: 'flex items-center mx-auto text-white login-button  gap-2' do %>
+                    class: 'text-white bg-dark-ochre flex items-center mx-auto login-button  gap-2' do %>
         ログインしてカレンダーに登録しよう
         <i class="fa-solid fa-pen"></i>
       <% end %>
