--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -38,4 +38,8 @@
   .absolute-right-corner {
     @apply absolute right-0;
   }
+
+  .info-box {
+    @apply p-4 rounded-md shadow-md bg-light-ochre;
+  }
 }
