--- a/app/views/calendars/index.html.erb
+++ b/app/views/calendars/index.html.erb
@@ -1,6 +1,6 @@
 <% title 'トップページ' %>
 
-<div class="container-wrapper">
+<div class="container-wrapper" data-controller="anchor-scroll">
   <section class="py-10 mb-8 px-2 text-center text-white">
     <h1 class="mb-4">
       <%= image_tag 'logo.png', alt: 'ロゴ', class: 'h-[300px] md:h-[400px] mx-auto' %>
@@ -22,13 +22,9 @@
   <% end %>
 
   <% @calendars.each do |calendar| %>
-    <article class="mb-10">
-      <%= link_to calendar_path(calendar),
-                  data: { test: 'calendar', year: calendar.year },
-                  class: 'bg-ochre block p-6 rounded-xl shadow-xl space-y-4 hover-border-white' do %>
-        <h2 class="text-white drop-shadow-md text-lg font-bold text-center"><%= calendar.title %></h2>
-        <%= render 'calendar_index', entries: calendar.entries %>
-      <% end %>
-    </article>
+    <div class="mb-10">
+      <%= render 'calendar_index', calendar: calendar %>
+    </div>
+
   <% end %>
 </div>
