細かいデザインの修正

--- a/app/views/calendars/_info_box.html.erb
+++ b/app/views/calendars/_info_box.html.erb
@@ -1,4 +1,4 @@
-<div class="info-box">
+<div class="info-box text-white">
   <div class="mb-2 flex flex-col sm:flex-row sm:justify-between items-start">
     <% if calendar.open? %>
       <p class="font-semibold">
