--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,7 +11,7 @@
       <h1 class="text-xl font-semibold text-white"><%= @user.name %></h1>
     </section>
 
-    <section class="mt-8 p-6 space-y-6">
+    <section class="p-6 space-y-6">
       <h2 class="text-lg font-bold tracking-wide">
         登録した記事一覧
       </h2>
@@ -31,7 +31,6 @@
           <% end %>
 
           <h3 class="mt-2 font-semibold tracking-wide flex items-center gap-2">
-            <i class="fas fa-bullhorn"></i>
             <%= entry.title %>
           </h3>
 
