--- a/app/views/calendars/_info_box.html.erb
+++ b/app/views/calendars/_info_box.html.erb
@@ -1,24 +1,16 @@
-<div class="info-box text-white">
-  <div class="mb-2 flex flex-col sm:flex-row sm:justify-between items-start">
+<div class="rounded-lg border border-blue-500 bg-blue-50 px-4 py-4 text-blue-800 shadow-md text-sm">
+  <div class="font-semibold mb-2 flex flex-col sm:flex-row sm:justify-between items-start">
     <% if calendar.open? %>
-      <p class="font-semibold">
-        <%= "#{calendar.max_entries}周目のカレンダー登録が始まりました！" %>
-      </p>
+      <p><%= "#{calendar.max_entries}周目のカレンダー登録が始まりました！" %></p>
     <% else %>
-      <p class="font-semibold">
-        このアドベントカレンダーは終了しました
-      </p>
+      <p>このアドベントカレンダーは終了しました</p>
     <% end %>
 
-    <p class="font-semibold">
-      登録人数: <span><%= calendar.entries.size %></span> / <%= 25 * calendar.max_entries %>
-    </p>
+    <p>登録人数: <%= calendar.entries.size %> / <%= 25 * calendar.max_entries %></p>
   </div>
 
   <% if calendar.open? %>
-    <p>
-      ＋ボタンを押してカレンダーに登録しよう
-    </p>
+    <p>＋ボタンを押してカレンダーに登録しよう</p>
   <% else %>
     <p>ご参加ありがとうございました！</p>
   <% end %>
