フッターの著作年を2025年に固定

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -14,6 +14,6 @@
       </li>
     </ul>
 
-    <span>&copy; <%= Time.current.year %> hagiya</span>
+    <span>&copy; 2025 hagiya</span>
   </div>
 </footer>
