--- a/app/views/calendars/_calendar_show.html.erb
+++ b/app/views/calendars/_calendar_show.html.erb
@@ -8,26 +8,23 @@
       </div>
     </div>
 
-    <% case %>
-    <% when current_user.blank? && entries.size < calendar.max_entries %>
+    <% if current_user.blank? && entries.size < calendar.max_entries %>
       <%= button_tag class: class_names(
             'absolute-right-corner text-2xl' => entries.any?,
             'absolute-center text-4xl' => entries.empty?
           ),
                      title: 'ログインが必要です',
                      data: { action: 'click->login-modal#open' } do %>
-        <i class="fa-solid fa-plus py-1 hover-pop"></i>
+      <i class="fa-solid fa-plus py-1 hover-pop"></i>
       <% end %>
-
-    <% when entry = entries.find { |e| e.user == current_user } %>
+    <% elsif entry = entries.find { |e| e.user == current_user } %>
       <%= link_to edit_entry_path(entry),
                   class: 'absolute-right-corner',
                   title: '編集',
                   data: { turbo_frame: 'entry_modal' } do %>
-        <i class="fa-solid fa-pen-to-square py-1 text-2xl hover-pop"></i>
+      <i class="fa-solid fa-pen-to-square py-1 text-2xl hover-pop"></i>
       <% end %>
-
-    <% when entries.size < calendar.max_entries %>
+    <% elsif entries.size < calendar.max_entries %>
       <%= link_to new_calendar_entry_path(calendar, registration_date: date),
                   class: class_names(
                     'absolute-right-corner text-2xl' => entries.any?,
@@ -35,7 +32,7 @@
                   ),
                   title: '新規作成',
                   data: { turbo_frame: 'entry_modal', test: date.to_s } do %>
-        <i class="fa-solid fa-plus py-1 hover-pop"></i>
+      <i class="fa-solid fa-plus py-1 hover-pop"></i>
       <% end %>
     <% end %>
 
