ドロップダウンメニューのデザインを変更

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -17,7 +17,7 @@
         </div>
 
         <ul data-dropdown-target="menu"
-            class="hidden bg-white/10 z-50 text-sm absolute-right-corner mt-2 w-36 border border-white/20 rounded shadow p-2 backdrop-blur-sm">
+            class="hidden bg-dark-ochre/50 z-50 text-sm absolute-right-corner mt-2 w-36 rounded shadow-lg p-2 backdrop-blur-sm">
           <li>
             <%= link_to 'マイページ', user_path(current_user),
                         class: 'block px-2 py-1 hover:bg-white/20 rounded' %>
