meta descriptionの表現を改善

--- a/app/views/calendars/show.html.erb
+++ b/app/views/calendars/show.html.erb
@@ -1,5 +1,5 @@
 <% title @calendar.title %>
-<% set_meta_tags description: "#{@calendar.title}の説明と登録された記事一覧を表示します。" %>
+<% set_meta_tags description: "#{@calendar.title}の記事一覧ページです。" %>
 
 <div class="container-wrapper py-8 rounded-xl">
 <% if @calendar.open? %>
